--- a/resources/sass/_views.scss
+++ b/resources/sass/_views.scss
@@ -1,3 +1,5 @@
 @import 'components/header';
 @import 'components/banner-slider';
 @import 'components/products';
+@import 'components/single-product';
+@import 'components/category-banner';
