--- a/resources/sass/_views.scss
+++ b/resources/sass/_views.scss
@@ -3,3 +3,4 @@
 @import 'components/products';
 @import 'components/single-product';
 @import 'components/category-banner';
+@import 'components/pagination';
