--- a/resources/sass/components/_products.scss
+++ b/resources/sass/components/_products.scss
@@ -17,12 +17,21 @@
         gap: $gap;
         margin-bottom: 60px;
         width: calc(100% + $gap);
+        @media (max-width: $screen-max-md){
+
+        }
 
         .product-card {
             position: relative;
             width: calc((100% / 3) - $gap);
             margin-bottom: 50px;
+            @media (max-width: $screen-max-md){
+                width: calc((100% / 2) - $gap);
+            }
+            @media (max-width: $screen-max-xs){
 
+                width: calc(100% - $gap);
+            }
             &:hover {
                 .product-image {
                     & > img {
@@ -100,48 +109,4 @@
     }
 
     //PRODUCTS PAGINATION
-    &__pagination {
-        ul.pagination {
-            display: flex;
-            list-style: none;
-            justify-content: center;
-
-            li.page-item {
-                width: 30px;
-                height: 30px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                border-radius: 5px;
-                transition: color .2s ease-in-out, background .2s ease-in-out;
-
-                &:hover {
-                    color: white;
-                    background-color: $blue;
-                }
-
-                a {
-                    color: inherit;
-                    padding: 5px;
-                }
-
-                &.active {
-                    color: white;
-                    background-color: $cyan;
-                }
-
-                &:first-child {
-                    margin-right: 15px;
-                }
-
-                &:last-child {
-                    margin-left: 15px;
-                }
-
-                &:not(:first-child), &:not(:last-child) {
-                    margin-right: 10px;
-                }
-            }
-        }
-    }
 }
