admin style added

--- a/resources/sass/_admin-views.scss
+++ b/resources/sass/_admin-views.scss
@@ -1,3 +1,4 @@
 @import 'components/admin/nav';
 @import 'components/pagination';
 @import 'components/admin/admin-products';
+@import 'components/admin/forms';
