--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -164,3 +164,33 @@ html, body {
 .admin-products .single-product__actions > a {
   margin-right: 20px;
 }
+
+.admin-form {
+  padding: 60px 0;
+}
+.admin-form form [class*=form-container] {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.admin-form form #picture {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  pointer-events: none;
+}
+.admin-form form .picture-btn {
+  font-weight: bold;
+  padding: 5px;
+  text-decoration: underline;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+.admin-form form fieldset {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+.admin-form form fieldset label {
+  margin-bottom: 5px;
+}
