--- a/resources/sass/_views.scss
+++ b/resources/sass/_views.scss
@@ -1,4 +1,5 @@
 @import 'components/header';
+@import 'components/footer';
 @import 'components/banner-slider';
 @import 'components/products';
 @import 'components/single-product';
